--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ requires-python = ">=3.9"
 # This section replaces 'install_requires'
 dependencies = [
     "tensorflow>=2.16.0",
-    "keras>=3.0,
+    "keras>=3.0",
     "numpy",
     "h5py",
     "six",
